fix for long filenames in editor bleeding out buttons

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -2111,8 +2111,9 @@ a.tag:hover {
   float: left;
   width: 100%;
   overflow: auto;
-  position: absolute;
-  top: 105px;
+  //position: absolute;
+  //top: 105px;
+  height: 100%;
   bottom: 0;
   margin: 0;
   .col {
